--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 .DS_Store
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
+
+./build
