--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           name: version
           path: version
-  build-linux-amd64:
+  build-linux:
     runs-on: ubuntu-latest
     needs:
       - version
@@ -49,14 +49,14 @@ jobs:
         with:
           go-version: '^1.25.1'
       - name: build binary
-        run: GOOS=linux GOARCH=amd64 go build -o ./build/swini
+        run: GOOS=linux GOARCH=amd64 go build -o swini
       - name: compress release folder
-        run: tar -czvf ./build/swini-$(cat version)-linux-amd64.tar.gz ./build/swini
+        run: tar -czvf swini-$(cat version)-linux-amd64.tar.gz swini
       - name: upload release artifact
         uses: actions/upload-artifact@v4
         with:
           name: linux
-          path: ./build/swini-*.tar.gz
+          path: swini-*.tar.gz
   build-darwin:
     runs-on: macos-latest
     needs:
@@ -76,22 +76,22 @@ jobs:
         with:
           go-version: '^1.25.1'
       - name: build amd64 binary
-        run: GOOS=darwin GOARCH=amd64 go build -o ./build/swini
+        run: GOOS=darwin GOARCH=amd64 go build -o swini
       - name: compress release folder
-        run: tar -czvf ./build/swini-$(cat version)-darwin-amd64.tar.gz ./build/swini
+        run: tar -czvf swini-$(cat version)-darwin-amd64.tar.gz swini
       - name: build arm64 binary
-        run: GOOS=darwin GOARCH=arm64 go build -o ./build/swini
+        run: GOOS=darwin GOARCH=arm64 go build -o swini
       - name: compress release folder
-        run: tar -czvf ./build/swini-$(cat version)-darwin-arm64.tar.gz ./build/swini
+        run: tar -czvf swini-$(cat version)-darwin-arm64.tar.gz swini
       - name: upload release artifact
         uses: actions/upload-artifact@v4
         with:
           name: darwin
-          path: build/swini-*.tar.gz
+          path: swini-*.tar.gz
   release:
     runs-on: ubuntu-latest
     needs:
-      - build-linux-amd64
+      - build-linux
       - build-darwin
     steps:
       - name: checkout
